# labflow

./: .gitignore  .mcp.json  AGENTS.md  AGENTS_Codex.md  AGENTS_Opencode.md  CHANGELOG.md  README.md  plugin.json
.agents/plugins/: marketplace.json
agents/: Lab.agent.md  LabExplore.agent.md  LabPrompt.agent.md  LabResearch.agent.md
opencode/: install.sh  labflow-rules.md  labflow.example.json  labflow.json  package-lock.json  package.json
opencode/agents/: labflow-develop.md  labflow-paper.md  labflow-plan.md  literature-worker.md  vision.md
opencode/commands/: imagegen.md
opencode/plugins/: labflow.ts
opencode/scripts/: imagegen.mjs
opencode/skills/annotation/: SKILL.md
opencode/skills/codebase-research/: SKILL.md  SKILL_CN.md
opencode/skills/deep-research/: SKILL.md  SKILL_CN.md
opencode/skills/external-research/: SKILL.md  SKILL_CN.md
opencode/skills/literature-forensics/scripts/: README.md  pyproject.toml  research.py  test_research.py
opencode/skills/literature-forensics/scripts/literature_forensics/: __init__.py  backends.py  cache.py  cli.py  dossier.py  exports.py  fetch.py  models.py
opencode/skills/literature-forensics/scripts/tests/: test_backends_and_graph.py  test_cache_and_exports.py  test_dossier_and_workers.py  test_fetch_and_cli.py  test_models_and_provider_limits.py
plugins/labflow/: .mcp.json
skills/annotation/: SKILL.md
skills/lab-handoff/: SKILL.md
skills/obsidian-research/: SKILL.md
skills/pdf-read/: SKILL.md
skills/pseudocode/: SKILL.md
skills/self-update/: SKILL.md
tests/: test_stage_problem_anchor.py
(+66 files in other folders)
