[project]
name = "literature-forensics"
version = "0.1.0"
description = "A local-first literature metadata and evidence helper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27,<1"]

[project.scripts]
literature-forensics = "literature_forensics.cli:main"

[dependency-groups]
dev = ["pytest>=8,<9"]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
